検索結果をより詳細に

--- a/templates/route_admin_list.html
+++ b/templates/route_admin_list.html
@@ -17,7 +17,7 @@
   <ul class="topnav">
     <li>
       <a class="left" href="#">
-        <h2>　MUSIC REEF 管理者</h2>s
+        <h2>　MUSIC REEF 管理者</h2>
       </a>
     </li>
     <li class="right">
