メニューバーの口コミ削除から口コミの一覧が見れるようした

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
           ><a style="color: white; font-size: 23px">口コミ管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a href="{{url_for('list_of_review')}}" style="color: rgb(60, 60, 60); font-size: 23px"
             >口コミ削除</a
           ></span
         >
