index.htmlにログアウトのリンク ・トップ画面に遷移するリンクの追加 新しくhtmlを作成

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,7 @@
         <button type="submit">ログイン</button>
       </form>
       <a href="{{url_for('register_form')}}">新規登録</a>
+      <a href="{{url_for('pass_reset')}}">パスワードを忘れた方へ</a>
     </div>
   </body>
 </html>
