--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,11 @@
   <body>
     <ul class="topnav">
       <li>
-        <a class="left" href="#"><h2>　MUSIC REEF 管理者</h2></a>
+        <a class="left" href="{{url_for('mypage')}}"><h2>　MUSIC REEF 管理者</h2></a>
       </li>
       <li class="right">
         <a
-          href="#"
+          href="{{url_for('logout')}}"
           style="
             border-left: 2px solid white; /*線の設定*/
             padding: 2px 8px; /*余白の設定*/
@@ -188,13 +188,14 @@
         <button class="msg-box msg-position js-delete-close-button">×</button>
         <div class="modal-body">
           <p>この音源を削除しますか？</p>
-          <form action="{{url_for('delete_exe',music_id=sound[0])}}" method="post">
+          <form action="{{url_for('delete_exe',id=sound[0])}}" method="post">
             
           <button type="submit">削除</button>
           </form>
         </div> 
       </div>
     </div>
+    {% endfor %}
     <!--詳細のモーダル-->
     <div class="layer detail-modal">
       <div class="modal-header">
@@ -205,6 +206,6 @@
       </div>
     </div>      
     <script type="text/javascript" src="{{ url_for('static', filename='/js/script.js') }}"></script>
-    {% endfor %}
+    
   </body>
 </html>
