--- a/templates/login.html
+++ b/templates/login.html
@@ -108,7 +108,7 @@
     </div>
     <br />
     <p style="text-align: center">
-      <a href="{{url_for('register_form')}}">新規登録</a>
+      <a href="{{url_for('pass_reset')}}">忘れた方へ</a>
     </p>
   </body>
 </html>
