--- a/templates/check_one_pass.html
+++ b/templates/check_one_pass.html
@@ -4,8 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>アカウント新規登録画面</title>
+
+    <title>ワンタイムパスワード認証</title>
+    <style>
+      .container {
+        font-family: arial;
+        font-size: 30px;
+        width: 100%;
+      }
+      .container h1 {
+        text-align: center;
+        color: #044f88;
+        margin: 0;
+      }
+
+      .container1 {
+        font-family: arial;
+        font-size: 50px;
+        width: 50%;
+        background-color: #548eba;
+        margin-left: auto;
+        margin-right: auto;
+        border-bottom: 1px solid;
+        border-right: 1px solid;
+        border-left: 1px solid;
+      }
+      .container1 p {
+        text-align: center;
+        color: white;
+        margin: 0;
+      }
+
+      .container2 {
+        font-family: arial;
+        font-size: 20px;
+        border-bottom: 1px solid;
+        border-right: 1px solid;
+        border-left: 1px solid;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .container2 p {
+        text-align: center;
+        margin: 0;
+      }
+      .container2 .container2-1 {
+        font-family: arial;
+        font-size: 20px;
+        text-align: left;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      input::placeholder {
+        font-size: 20px;
+        color: #dcdcdc;
+      }
+
+      .btn--orange,
+      a.btn--orange {
+        color: #fff;
+        background-color: #548eba;
+        font-size: 25px;
+        margin-left: 120px;
+      }
+      a.btn--radius {
+        /*ボタンの丸み*/
+        border-radius: 100vh;
+      }
+    </style>
   </head>
   <body>
     <p>　　　</p>
@@ -13,17 +81,24 @@
       <h1>MUSIC REEF</h1>
     </div>
     <div class="container1">
-      <p>メール送信</p>
+      <p style="font-size: 35px; padding-top: 10px; padding-bottom: 10px">
+        ワンタイムパスワード認証
+      </p>
     </div>
     <div class="container2">
       <br />
-      <p>ワンタイムパスワードを入力してください</p>
+      <p>メールに届いたワンタイムパスワードを入力してください</p>
       <br />
       <div class="container2-1">
-        <p>ワンタイムパスワードが{{ mail }}に送信されました<p>
         <form action="{{url_for('check_one_pass')}}" method="post">
-          ワンタイムパスワード<input type="password" name="otp">
-          <button type="submit">送信</button>
+          <input
+            type="password"
+            name="otp"
+            style="width: 100%; height: 40px"
+            size="80"
+            placeholder="ワンタイムパスワード"
+          /><br />
+          　　　　　　　　<button type="submit">完了</button>
         </form>
       </div>
       <br />
