--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,11 @@
                   </tr>
                   <tr>
 
-                    <td style="border: none;"><button class="js-detail-modal-button" >詳細</button></td>
+                    <td style="border: none;">
+                      <button class="js-detail-modal-button" onclick="openModal('{{ sound[1] }}', '{{ sound[2] }}', '{{ sound[3] }}', '{{ sound[4] }}', '{{ sound[5] }}', '{{ sound[6] }}', '{{ sound[7] }}', '{{ sound[8] }}', '{{ sound[9] }}')">
+                          詳細
+                      </button>
+                  </td>
                     <td style="border: none;">
                       <a href="{{url_for('music_edit',id=sound[0])}}">編集</a>
                     </td>
@@ -214,12 +218,11 @@
     <!--詳細のモーダル-->
     <div class="layer detail-modal">
       <div class="modal-header">
-        <button class="msg-box msg-position js-detail-close-button">×</button>
-        <div class="modal-body">
-          
-        </div> 
+          <button class="msg-box msg-position js-detail-close-button" onclick="closeModal()">×</button>
+          <div class="modal-body1" id="modal-body1">
+          </div>
       </div>
-    </div>      
+  </div>
 
     <script type="text/javascript" src="{{ url_for('static', filename='/js/script.js') }}"></script>
 
