--- a/templates/music_edit.html
+++ b/templates/music_edit.html
@@ -109,12 +109,14 @@
       <div class="body">
         <h2 style="margin-left: 50px">音源の編集</h2>
         <div style="margin-left: 40px">
-         
-          <form action="{{url_for('music_edit_exe' ,id = music.music_id)}}" method="post">
+          <form
+            action="{{url_for('music_edit_exe' ,id = music.music_id)}}"
+            method="post"
+          >
             名前<input
               type="text"
               name="name"
-              value = "{{music.name}}"
+              value="{{music.name}}"
               style="
                 width: 300px;
                 height: 30px;
@@ -128,7 +130,7 @@
             ジャンル
             <select
               name="genre"
-              value = "{{music.genre}}"
+              value="{{music.genre}}"
               style="margin-bottom: 10px; text-align: center; margin-left: 20px"
             >
               <option value="1">指定しない</option>
@@ -146,7 +148,7 @@
             <p>詳細</p>
             <textarea
               name="detail"
-              value = "{{music.detail}}"
+              value="{{music.detail}}"
               rows="5"
               cols="60"
               style="margin-bottom: 10px; margin-left: 88px"
@@ -154,21 +156,21 @@
             ><br />
             長さ<input
               type="text"
-              value = "{{music.length}}"
+              value="{{music.length}}"
               name="length"
               pattern="\d{1,2}:\d{2}"
               style="margin-bottom: 10px; margin-left: 57px"
             /><br />
             作曲者<input
               type="text"
-              value = "{{music.composer}}"
+              value="{{music.composer}}"
               name="composer"
               style="margin-bottom: 10px; margin-left: 40px"
             /><br />
             参照元
             <select
               name="source"
-              value = "{{music.source}}"
+              value="{{music.source}}"
               style="margin-bottom: 10px; margin-left: 35px"
             >
               <option value="1">A</option>
@@ -180,7 +182,7 @@
             ><br />
             URL<input
               type="text"
-              value = "{{music.URL}}"
+              value="{{music.URL}}"
               name="url"
               style="margin-bottom: 10px; margin-left: 57px; width: 600px"
             /><br />
@@ -214,7 +216,6 @@
               style="margin-bottom: 10px; margin-left: 80px"
             />YouTube<br />
             <button type="submit">編集</button><br /><br /><br />
-            
           </form>
         </div>
       </div>
