--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -183,36 +183,57 @@
               name="url"
               style="margin-bottom: 10px; margin-left: 57px; width: 600px"
             /><br />
-            タグ<br />
+            タグ<br/>
             <b>雰囲気</b><br />
+            {% for tag_list in music %}
+              {% if tag_list[1] == 1%}
             <input
               type="checkbox"
               name="tag_name"
-              value="おだやか"
+              value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />おだやか<br />
+            />{{ tag_list[2]}}
+            {% endif %}
+            {% endfor %}
+            <br />
             <b>感情</b><br />
+            {% for tag_list in music %}
+              {% if tag_list[1] == 2 %}
             <input
               type="checkbox"
               name="tag_name"
-              value="かなしい"
+              value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />かなしい<br />
+            />{{tag_list[2]}}
+            {% endif %}
+            {% endfor %}
+            <br />
             <b>楽器</b><br />
+            {% for tag_list in music %}
+              {% if tag_list[1] == 3 %}
             <input
               type="checkbox"
               name="tag_name"
-              value="ピアノ"
+              value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />ピアノ<br />
+            />{{tag_list[2]}}
+            {% endif %}
+            {% endfor %}
+            <br />
             <b>用途</b><br />
+            {% for tag_list in music %}
+              {% if tag_list[1] == 4 %}
             <input
               type="checkbox"
               name="tag_name"
-              value="YouTube"
+              value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />YouTube<br />
+            />{{tag_list[2]}}
+            {% endif %}
+            {% endfor %}
+            <br />
             <button type="submit">登録</button><br /><br /><br />
+            
           </form>
         </div>
       </div>
