--- a/templates/music_edit.html
+++ b/templates/music_edit.html
@@ -75,12 +75,16 @@
           ><a style="color: white; font-size: 23px">音源の管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('mypage')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >音源検索</a
           ></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('music_register')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >音源登録</a
           ></span
         >
@@ -88,7 +92,9 @@
           ><a style="color: white; font-size: 23px">口コミ管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('list_of_review')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >口コミ削除</a
           ></span
         >
@@ -96,7 +102,9 @@
           ><a style="color: white; font-size: 23px">アカウント管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('admin_list')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >管理者一覧</a
           ></span
         >
