--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -61,7 +61,9 @@
   <body>
     <ul class="topnav">
       <li>
-        <a class="left" href="{{url_for('mypage')}}"><h2>　MUSIC REEF 管理者</h2></a>
+        <a class="left" href="{{url_for('mypage')}}"
+          ><h2>　MUSIC REEF 管理者</h2></a
+        >
       </li>
       <li class="right">
         <a
@@ -87,7 +89,9 @@
           ></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('music_register')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >音源登録</a
           ></span
         >
@@ -95,7 +99,9 @@
           ><a style="color: white; font-size: 23px">口コミ管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('list_of_review')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >口コミ削除</a
           ></span
         >
@@ -103,7 +109,9 @@
           ><a style="color: white; font-size: 23px">アカウント管理</a></span
         >
         <span class="blockitem" style="height: 45px"
-          ><a href="#" style="color: rgb(60, 60, 60); font-size: 23px"
+          ><a
+            href="{{url_for('admin_list')}}"
+            style="color: rgb(60, 60, 60); font-size: 23px"
             >管理者一覧</a
           ></span
         >
