--- a/templates/login.html
+++ b/templates/login.html
@@ -7,75 +7,11 @@
       rel="icon"
       href="{{url_for('static', filename='favicon/mrロゴ.ico')}}"
     />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='/css/login.css')}}"
+    />
     <title>ログイン画面</title>
-    <style>
-      .container {
-        font-family: arial;
-        font-size: 30px;
-        width: 100%;
-      }
-      .container h1 {
-        text-align: center;
-        color: #044f88;
-        margin: 0;
-      }
-
-      .container1 {
-        font-family: arial;
-        font-size: 50px;
-        width: 50%;
-        background-color: #548eba;
-        margin-left: auto;
-        margin-right: auto;
-        border-bottom: 1px solid;
-        border-right: 1px solid;
-        border-left: 1px solid;
-      }
-      .container1 p {
-        text-align: center;
-        color: white;
-        margin: 0;
-      }
-
-      .container2 {
-        font-family: arial;
-        font-size: 20px;
-        border-bottom: 1px solid;
-        border-right: 1px solid;
-        border-left: 1px solid;
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .container2 p {
-        text-align: center;
-        margin: 0;
-      }
-      .container2 .container2-1 {
-        font-family: arial;
-        font-size: 20px;
-        text-align: left;
-        width: 60%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      input::placeholder {
-        font-size: 20px;
-        color: #dcdcdc;
-      }
-
-      .btn--orange,
-      a.btn--orange {
-        color: #fff;
-        background-color: #548eba;
-        font-size: 25px;
-        margin-left: 120px;
-      }
-      a.btn--radius {
-        /*ボタンの丸み*/
-        border-radius: 100vh;
-      }
-    </style>
   </head>
   <body>
     <p>　　　</p>
@@ -94,11 +30,15 @@
         {% endif %} {% if msg != null %}
         <p style="color: blue">{{msg}}</p>
         {% endif %}
-        <form action="{{url_for('login')}}" method="post">
-          <input type="text" style="width: 350px; height: 40px" size="80"
+        <form
+          action="{{url_for('login')}}"
+          method="post"
+          style="text-align: center"
+        >
+          <input type="text" style="width: 100%; height: 40px" size="80"
           placeholder="　メール" name="mail" value="{{data.mail if data is
           defined else ''}}" /required><br /><br />
-          <input type="password" style="width: 350px; height: 40px" size="80"
+          <input type="password" style="width: 100%; height: 40px" size="80"
           placeholder="　パスワード" name="password" value="{{data.password if
           data is defined else ''}}" /required><br /><br />
           <button type="submit">ログイン</button>
