app.pyはリンク先の変更 htmlはstyleの修正 db.pyにはタグ検索も可能にした

--- a/templates/music_register.html
+++ b/templates/music_register.html
@@ -191,7 +191,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{ tag_list[2]}}
             {% endif %}
             {% endfor %}
@@ -203,7 +203,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}}
             {% endif %}
             {% endfor %}
@@ -215,7 +215,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}}
             {% endif %}
             {% endfor %}
@@ -227,7 +227,7 @@
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
-              style="margin-bottom: 10px; margin-left: 80px"
+              style="margin-bottom: 10px;"
             />{{tag_list[2]}}
             {% endif %}
             {% endfor %}
