--- a/templates/music_edit.html
+++ b/templates/music_edit.html
@@ -3,55 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='/css/music_register.css')}}"
+    />
     <title>音源編集画面</title>
-    <style>
-      ul.topnav {
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        background-color: #044f88;
-      }
-      ul.topnav li {
-        float: left;
-      }
-      ul.topnav li a {
-        display: block;
-        text-align: center;
-        text-decoration: none;
-        color: white;
-      }
-      ul.topnav li a.left {
-        background-color: #044f88;
-      }
-      ul.topnav li.right {
-        float: right;
-      }
-      .contaner {
-        display: flex;
-        width: 100%;
-      }
-      span {
-        display: block;
-      }
-      .blockitem {
-        flex: 1;
-        font-size: 28px;
-        text-align: center;
-        padding-top: 10px;
-        height: 60px;
-        position: relative;
-      }
-      .body {
-        flex: 4;
-        height: 500px;
-        border-left: 1px solid #747474;
-      }
-      .blockitem a {
-        vertical-align: 10px;
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
     <ul class="topnav">
@@ -196,52 +152,40 @@
             /><br />
             タグ<br />
             <b>雰囲気</b><br />
-            {% for tag_list in sound %}
-             {% if tag_list[1] == 1 %}
+            {% for tag_list in sound %} {% if tag_list[1] == 1 %}
             <input
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />{{tag_list[2]}}
-            {% endif %}
-            {% endfor %}
+            />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>感情</b><br />
-            {% for tag_list in sound %}
-             {% if tag_list[1] == 2 %}
+            {% for tag_list in sound %} {% if tag_list[1] == 2 %}
             <input
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />{{tag_list[2]}}
-            {% endif %}
-            {% endfor %}
+            />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>楽器</b><br />
-            {% for tag_list in sound %}
-             {% if tag_list[1] == 3 %}
+            {% for tag_list in sound %} {% if tag_list[1] == 3 %}
             <input
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />{{tag_list[2]}}
-            {% endif %}
-            {% endfor %}
+            />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <b>用途</b><br />
-            {% for tag_list in sound %}
-             {% if tag_list[1] == 4 %}
+            {% for tag_list in sound %} {% if tag_list[1] == 4 %}
             <input
               type="checkbox"
               name="tag_name"
               value="{{tag_list[2]}}"
               style="margin-bottom: 10px; margin-left: 80px"
-            />{{tag_list[2]}}
-            {% endif %}
-            {% endfor %}
+            />{{tag_list[2]}} {% endif %} {% endfor %}
             <br />
             <button type="submit">編集</button><br /><br /><br />
           </form>
